переносит тег <div>

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -135,7 +135,7 @@ text-align: left;
   color: #2D3440;
 }
 
-.benefits{
+.advantages-container{
   background-image: url("../images/benefits.jpg");
   background-size: 1170px 480px;
   background-repeat: no-repeat;
