--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,7 @@ body {
 }
 
 .navigation-link {
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   line-height: 20px;
   color: #2D3440;
   text-align: center;
@@ -51,17 +51,17 @@ body {
 }
 
 .main-gallery {
-text-align: left;
+  text-align: left;
 }
 
 .main-gallery-title {
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 36px;
   line-height: 46px;
 }
 
 .main-text {
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 18px;
   line-height: 24px;
 }
@@ -71,7 +71,7 @@ text-align: left;
 }
 
 .gifts-title {
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 32px;
   line-height: 46px;
   text-align: center;
@@ -95,7 +95,7 @@ text-align: left;
 }
 
 .gifts-item-title {
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 24px;
   line-height: 30px;
   text-align: center;
@@ -105,7 +105,7 @@ text-align: left;
 }
 
 .popular-product-title {
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 32px;
   line-height: 46px;
 }
@@ -116,7 +116,7 @@ text-align: left;
 
 .product-card-title {
   color: #2D3440;
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 20px;
   line-height: 24px;
 }
@@ -129,7 +129,7 @@ text-align: left;
 }
 
 .product-card-price {
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 20px;
   line-height: 24px;
   color: #2D3440;
@@ -145,7 +145,7 @@ text-align: left;
 }
 
 .advantages-title {
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 32px;
   line-height: 46px;
   text-align: center;
@@ -206,7 +206,7 @@ text-align: left;
 }
 
 .delivery-title {
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 32px;
   line-height: 46px;
   text-align: left;
@@ -289,28 +289,28 @@ text-align: left;
 }
 
 .inner-header-title {
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 32px;
   line-height: 46px;
   font-weight: 900;
 }
 
 .catalog-filter-title {
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 14px;
   line-height: 20px;
 }
 
 .select-control {
   color: #2D3440;
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 14px;
   line-height: 20px;
 }
 
 .catalog-filter-list {
   color: #2D3440;
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 14px;
   line-height: 20px;
 }
@@ -321,7 +321,7 @@ text-align: left;
 
 .pagination-item {
   color: #2D3440;
-  font-family: 'inter' sans-serif;
+  font-family: 'inter', sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-align: right;
