--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,16 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+
   font-family: 'inter', sans-serif;
   font-size: 16px;
   line-height: 22px;
@@ -43,6 +52,10 @@ body {
 
 .navigation-telephone {
   font-weight: 700;
+}
+
+.main-container {
+  flex-grow: 1;
 }
 
 .main-index {
