--- a/styles/styles.css
+++ b/styles/styles.css
@@ -152,6 +152,17 @@ body {
   line-height: 46px;
 }
 
+.popular-product-list {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+}
+
+.popular-product-item {
+  width: 270px;
+}
+
 .product-card-link {
   text-decoration: none;
 }
@@ -173,6 +184,17 @@ body {
   font-size: 20px;
   line-height: 24px;
   color: #2D3440;
+}
+
+.advertising-email-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+}
+
+.advertising-email {
+  width: 570px;
 }
 
 .advantages-container {
