--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,6 +61,10 @@ body {
   margin-right: 16px;
 }
 
+.navigation-list-catalog {
+  display: none;
+}
+
 .navigation-user {
   max-width: 463px;
   margin-left: auto;
